--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -173,7 +173,7 @@
                 <div *ngIf="!ranking"
                     style="display: flex;flex-direction:row;justify-content: center;align-items: center;gap: 110px;">
                     <mat-icon (click)="voteName('negative')"
-                        style="font-size: 65px;color: #e800d7;cursor: pointer;width: 100%"
+                        style="font-size: 65px;color: #C50A19;cursor: pointer;width: 100%"
                         class="full-icon">highlight_off</mat-icon>
 
                     <mat-icon style="cursor: pointer;color: #324395;"
@@ -186,7 +186,7 @@
                         sentiment_satisfied</mat-icon>
 
                     <mat-icon (click)="voteName('positive')"
-                        style="font-size: 65px;color: #00c600;cursor: pointer;width: 100%"
+                        style="font-size: 65px;color: #12772F;cursor: pointer;width: 100%"
                         class="full-icon">sentiment_satisfied_alt</mat-icon>
                 </div>
 
