--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -192,6 +192,34 @@
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+.error {
+    font-size: 14px;
+    color: rgb(49, 46, 46);
+    text-transform: none;
+    font-weight: 400;
+    width: 100%;
+    height: 100%;
+    /* background-image : url('bsrdev/assets/images/disconnect.jpg'); */
+    background-position: center, center;
+    background-color: whitesmoke;
+    background-blend-mode: screen;
+    
+}
+
+.errorcode {
+    font-size: 75px;
+    color: #ff8300;
+    font-weight: bold;
+    font-family: Helvetica;
+    margin-bottom: 50px;
+}
+
+.errormess {
+    font-size: 25px;
+    color: #ff8300;
+    font-weight: 400;
+    font-family: Helvetica;
+}
 //desktop
 @media (min-width: 1025px) {
     .page-design {
