Add microsoft login

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -12,8 +12,9 @@
                 <div class="mat-subheading-1 secondary-text">Welcome to NameVote </div>
 
                 <form name="loginForm" [formGroup]="loginForm" novalidate class="open-close-container">
-
-                    <mat-form-field appearance="outline">
+                    <button   class="submit-button"   mat-raised-button style="color: white;" color="primary"(click)="signIn()">Sign In</button>
+                    <button   class="submit-button"   mat-raised-button  style="color: white;" color="primary"(click)="signOut()">Sign Out</button>
+                    <!-- <mat-form-field appearance="outline">
                         <mat-label>Email</mat-label>
                         <input matInput placeholder="Email" formControlName="email">
                         <mat-error *ngIf="loginForm.get('email').hasError('required')">
@@ -31,7 +32,7 @@
                         <mat-error>
                             name is required
                         </mat-error>
-                    </mat-form-field>
+                    </mat-form-field> -->
 
                     <mat-error *ngIf="false">
                         Username or password incorrect or not register
@@ -48,10 +49,10 @@
                     </a>
                 </div> -->
 
-                    <button (click)="submitCredentials()" mat-raised-button style="color: white;" color="primary"
+                    <!-- <button (click)="submitCredentials()" mat-raised-button style="color: white;" color="primary"
                         class="submit-button" aria-label="LOG IN" [disabled]="loginForm.invalid">
                         SUBMIT
-                    </button>
+                    </button> -->
 
                 </form>
 
