--- a/src/app/bmx/bmx-creator/project-list/project-list.component.html
+++ b/src/app/bmx/bmx-creator/project-list/project-list.component.html
@@ -39,23 +39,27 @@
                 </ng-container>
                 <ng-container matColumnDef="Close">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Close </th>
-                    <td mat-cell *matCellDef="let element"> {{element.Close}} </td>
+                    <td mat-cell *matCellDef="let element">
+                        <ng-container *ngIf="element.bmxStatus === 'close'">
+                            <button mat-icon-button aria-label="Example icon button with a home icon"
+                                (click)="setBMStatus(element)">
+                                <mat-icon style="color: red">close</mat-icon>
+                            </button>
+                        </ng-container>
+                    </td>
                 </ng-container>
                 <ng-container matColumnDef="Active">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Active </th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-icon-button  aria-label="Example icon button with a home icon"
-                            (click)="setBMStatus(element)">
-                            <ng-container *ngIf="element.bmxStatus === 'close'; else activeIcon" >
-                                <mat-icon style="color: red">close</mat-icon>
-                            </ng-container>
-                            <ng-template #activeIcon  >
-                                <mat-icon style="color: green;">done</mat-icon>
-                            </ng-template>
-                        </button>
+                        <ng-container *ngIf="element.bmxStatus != 'close'">
+                            <button mat-icon-button aria-label="Example icon button with a home icon"
+                                (click)="setBMStatus(element)">
+                                <mat-icon style="color: green">done</mat-icon>
+                            </button>
+                        </ng-container>
                     </td>
                 </ng-container>
-                
+
                 <ng-container matColumnDef="Email">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
                     <td mat-cell *matCellDef="let element">
