--- a/src/app/bmx/bmx-creator/project-information/project-information.component.html
+++ b/src/app/bmx/bmx-creator/project-information/project-information.component.html
@@ -69,7 +69,9 @@
                 </mat-form-field>
 
             </div>
-            <div style="width: 30%; margin-left: 50px;">
+            <div style="width: 30%; margin-left: 30px;">
+                <label class="selectLabels">Closing date</label>
+
                 <mat-card class="demo-inline-calendar-card">
                     <mat-calendar [selected]="selectedDate" (selectedChange)="onSelect($event)"></mat-calendar>
                 </mat-card>
