--- a/src/app/bmx/dashboard/menu/menu.component.html
+++ b/src/app/bmx/dashboard/menu/menu.component.html
@@ -24,13 +24,13 @@
     <mat-icon class="full-icon" style="font-size: 35px;">handyman
     </mat-icon>
   </button>
-  <button class="no-print"
+  <!-- <button class="no-print"
     *ngIf="(isMenuActive11 && bmxClientPageDesignMode) || (isMenuActive16 && bmxClientPageDesignMode)"
     style="position: absolute;bottom: 30px;z-index: 9999999999;right: 30px;outline: none;"
     (click)="toggleViewPageModeDesign()" mat-icon-button matTooltip="preview" matTooltipPosition="above">
     <mat-icon class="full-icon" style="font-size: 35px;">visibility
     </mat-icon>
-  </button>
+  </button> -->
   <button class="no-print"
     *ngIf="(isMenuActive11 && !bmxClientPageDesignMode) || (isMenuActive16 && !bmxClientPageDesignMode)"
     style="position: absolute;top: 10px;outline: none;" (click)="toggleViewPageModeDesign()" mat-icon-button
