--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,16 @@
-.container{
-    width: 100%;
-    display: flex;
+*{
     margin: 0px;
     padding: 0px;
+}
+.container {
+    width: 100%;
+    display: flex;
+}
+@media (max-width: 992px) {
+    .container {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        justify-content: space-between;
+    }
 }
