--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -1,68 +1,117 @@
+<div *ngIf="showCreationModalVideo" id="myModal" class="modal-video"
+  style="display: flex;flex-direction: column;gap: 2px;">
+  <!-- <label class="container-checkbox">Don't show again
+      <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
+      <span class="checkmark">&#x2714;</span>        
+  </label> -->
+  <div class="modal-content">
+    <video src='{{CREATION_VIDEO_PATH}}' controls></video>
+
+  </div>
+  <button class="btn btn-raised close-modal" (click)="showCreationModalVideo=false">close</button>
+</div>
+<div *ngIf="isDashboardMenu" class="general-container">
+  <div class="logo-container">
+    <img style="    width: 100%;" src="assets/img/bmx/bm-logo-2020-md.png" alt="logo" />
+  </div>
+  <div class="welcome">
+    <mat-icon style="color: white;padding: 15px;">account_circle</mat-icon>
+    <div class="welcome-role"
+      style="color: white; width: 100%;text-align: center;font-family: Arial, Helvetica, sans-serif;margin-top: 10px;">
+      Welcome {{userFullName}}
+      <br>
+      Role: {{userRole}}
+    </div>
+  </div>
+  <div class="movil">
+
+    <div class="menu-container" *ngIf="isMenuVisible">
+      <div class="menu-item-Light" (click)="navigateTo('dashboard')">
+        <i class="bi bi-list-task"></i> Project List
+      </div>
+      <div class="menu-item-Dark" style="justify-content: flex-start;" (click)="navigateTo('project-information')">
+        <i class="bi bi-pencil-fill"></i> Create/Edit Matrix
+        <div>
+          <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
+            class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
+            aria-label="ranking">
+            <mat-icon style="font-size: 26px; color: white; " class="full-icon">video_library</mat-icon>
+          </button>
+        </div>
+      </div>
+      <!-- <div class="menu-item-Dark" style="justify-content: flex-start;">
+        <i class="bi bi-box-arrow-right"></i> Sign out
+      </div> -->
+      <div class="menu-item-Dark" style="justify-content: flex-start;" (click)="navigateBack()">
+        <i class="bi bi-arrow-left-circle"></i>
+        BACK
+      </div>
+    </div>
+  </div>
+</div>
+
 <div *ngIf="!isDashboardMenu" class="general-container">
   <div class="logo-container">
     <img style="    width: 100%;" src="assets/img/bmx/bm-logo-2020-md.png" alt="logo" />
   </div>
-  <div class="movil">
-    <button type="button"  id="menuToggleBtn" (click)="toggleMenu()" class="button-menu"><i class="bi bi-list"></i></button>
-  <div class="menu-container" *ngIf="isMenuVisible">
-    <div class="menu-item-Light" (click)="navigateTo('dashboard')">
-      <i class="bi bi-list-task"></i> dashboard
-    </div>
-    <div class="menu-item-Dark" style="justify-content: flex-start;" (click)="navigateTo('project-information')">
-      <i class="bi bi-pencil-fill"></i> Create/Edit Matrix
-      <i style="    margin-left: 32px;" class="bi bi-play-btn-fill"></i>
-    </div>
-   
-    
-    <div class="menu-item-Dark" (click)="navigateTo('bmx-creation')">
-      Survey Creation & Design
-    </div>
-    <div class="menu-item-Dark"(click)="navigateTo('participants')" >
-      Participants
-      <div class="icon-play"> <i class="bi bi-play-btn-fill"></i></div>
-    </div>
-    <div class="menu-item-Dark" (click)="navigateTo('participants-emails')">
-      Survey Participants/Email <div class="icon-play"> <i class="bi bi-play-btn-fill"></i></div>
-    </div>
-    <div class="menu-item-Dark" (click)="navigateTo('reports')">
-      Reports <div class="icon-play"> <i class="bi bi-play-btn-fill"></i></div>
-    </div>
-    <div class="menu-item-Dark" style="justify-content: flex-start;">
-      <i class="bi bi-box-arrow-right"></i> Sign out
-    </div>
-
-    <div class="menu-item-Dark" style="justify-content: flex-start;" (click)="navigateBack()">
-      <i class="bi bi-arrow-left-circle"></i>
-      BACK
-    </div>
-  </div>
-  </div>
-</div>
-
-
-<div *ngIf="isDashboardMenu" class="general-container">
-  <div class="logo-container">
-      <img style="    width: 100%;" src="assets/img/bmx/bm-logo-2020-md.png" alt="logo" />
-  </div>
-  <div class="movil">
-      <button type="button" id="menuToggleBtn" (click)="toggleMenu()" class="button-menu"><i
-              class="bi bi-list"></i></button>
-      <div class="menu-container" *ngIf="isMenuVisible">
-          <div class="menu-item-Light" (click)="navigateTo('dashboard')">
-              <i class="bi bi-list-task"></i> dashboard
-          </div>
-          <div class="menu-item-Dark" style="justify-content: flex-start;"
-              (click)="navigateTo('project-information')">
-              <i class="bi bi-pencil-fill"></i> Create/Edit Matrix
-              <i style="    margin-left: 32px;" class="bi bi-play-btn-fill"></i>
-          </div>
-          <div class="menu-item-Dark" style="justify-content: flex-start;">
-              <i class="bi bi-box-arrow-right"></i> Sign out
-          </div>
-          <div class="menu-item-Dark" style="justify-content: flex-start;" (click)="navigateBack()">
-              <i class="bi bi-arrow-left-circle"></i>
-              BACK
-          </div>
+  <div>
+    <div class="welcome">
+      <mat-icon style="color: white;padding: 15px;">account_circle</mat-icon>
+      <div class="welcome-role"
+        style="color: white; width: 100%;text-align: center;font-family: Arial, Helvetica, sans-serif;margin-top: 10px;">
+        Welcome {{userFullName}}
+        <br>
+        Role: {{userRole}}
       </div>
+    </div>
+  </div>
+  <div class="movil">
+   
+    <div class="menu-container" *ngIf="isMenuVisible">
+     
+      <div class="menu-item-Light" (click)="navigateTo('project-information')">
+        <i class="bi bi-list-task"></i> Project Information
+      </div>
+
+      <div class="menu-item-Dark" (click)="navigateTo('bmx-creation')">
+        Survey Creation & Design
+      </div>
+      <div class="menu-item-Dark" (click)="navigateTo('participants')">
+        Participants
+        <div class="video-container">
+          <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
+            class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
+            aria-label="ranking">
+            <mat-icon style="font-size: 26px; color: white; " class="full-icon">video_library</mat-icon>
+          </button>
+        </div>
+      </div>
+      <div class="menu-item-Dark" (click)="navigateTo('participants-emails')">
+        Survey Participants/Email <div>
+          <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
+            class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
+            aria-label="ranking">
+            <mat-icon style="font-size: 26px; color: white; " class="full-icon">video_library</mat-icon>
+          </button>
+        </div>
+      </div>
+      <div class="menu-item-Dark" (click)="navigateTo('reports')">
+        Reports <div>
+          <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
+            class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
+            aria-label="ranking">
+            <mat-icon style="font-size: 26px; color: white; " class="full-icon">video_library</mat-icon>
+          </button>
+        </div>
+      </div>
+      <!-- <div class="menu-item-Dark" style="justify-content: flex-start;">
+        <i class="bi bi-box-arrow-right"></i> Sign out
+      </div> -->
+
+      <div class="menu-item-Dark" style="justify-content: flex-start;" (click)="navigateBack()">
+        <i class="bi bi-arrow-left-circle"></i>
+        BACK
+      </div>
+    </div>
   </div>
 </div>
