--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -71,10 +71,11 @@
             </div>
             <div style="width: 30%; margin-left: 30px;">
                 <label class="selectLabels">Closing date</label>
-
-                <mat-card class="demo-inline-calendar-card">
-                    <mat-calendar [selected]="selectedDate" (selectedChange)="onSelect($event)"></mat-calendar>
-                </mat-card>
+                <mat-form-field>
+                    <input matInput [matDatepicker]="picker" placeholder="Elija una fecha"  (dateChange)="onSelect($event.value)">
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                  </mat-form-field>
             </div>
 
             <div></div>
