--- a/src/app/bmx/components/respondents/respondents.component.html
+++ b/src/app/bmx/components/respondents/respondents.component.html
@@ -1,6 +1,6 @@
-<div style="width: 100%;">
+<div style="width: 900px;">
 
-    <div style="width: 75%;">
+    <div >
         <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Send</div>
 
         <mat-form-field style="  width: 94%;margin: 20px;" appearance="outline">
