--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,14 @@
-*{
-    margin: 0px;
+* {
+    max-width: 100%;
     padding: 0px;
 }
+
 .container {
     width: 100%;
     display: flex;
+
 }
+
 @media (max-width: 992px) {
     .container {
         display: flex;
