Fixed survey creation view

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -11,7 +11,7 @@
     <button class="btn btn-raised close-modal" (click)="showCreationModalVideo=false">close</button>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
-<div *ngIf="bmxClientPageOverview" style="display: flex;
+<div  style="display: flex;
     flex-direction: row-reverse;
     justify-content: end;
     top: -30px;
