--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="showCreationModalVideo" id="myModal" class="modal-video"
+<div *ngIf="showCreationModalVideo && !hideMenu" id="myModal" class="modal-video"
   style="display: flex;flex-direction: column;gap: 2px;">
   <!-- <label class="container-checkbox">Don't show again
       <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
@@ -50,7 +50,7 @@
   </div>
 </div>
 
-<div *ngIf="!isDashboardMenu" class="general-container">
+<div *ngIf="!isDashboardMenu && !hideMenu" class="general-container">
   <div class="logo-container">
     <img style="    width: 100%;" src="assets/img/bmx/bm-logo-2020-md.png" alt="logo" />
   </div>
